--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Shawna Halladeen</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
